# portfolio_ai_assistant_of_malik

./: .gitignore  BUGS_FIXED.md  COMPLETED.md  EFFICIENCY_TEST_RESULTS.md  PLAYWRIGHT_EFFICIENCY_RESULTS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RUN_ME.md  SETUP_GUIDE.md  START.txt  START_HERE.md  SUCCESS.md  contacts.db  package-lock.json  start_all.py  test_backend_efficiency.py  test_contact_full.py  verify_db.py
.claude/: settings.local.json
.gemini/: settings.json
backend/: ERROR_FIXES.md  README.md  RUN_INSTRUCTIONS.md  UPGRADE_SUMMARY.md  config.py  contacts.db  main.py  pyproject.toml  requirements.txt  test_efficiency.py
backend/.chainlit/: config.toml
backend/portfolio_agents/: __init__.py  portfolio_agent.py
backend/routes/: __init__.py  assistant.py  contact.py
backend/services/: __init__.py  context_service.py  db_service.py
backend/utils/: __init__.py  logging_config.py
frontend/: .env.example  MIGRATION_SETUP.md  README.md  eslint.config.mjs  package-lock.json  package.json  vercel.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx  page.tsx.backup  sitemap.ts
frontend/app/components/: About.tsx  AchievementStats.tsx  AnimatedCounter.tsx  Button.tsx  Certifications.tsx  ChatbotWidget.tsx  ClientProviders.tsx  CommandPalette.tsx  Contact.tsx  ContextMenu.tsx  DeveloperTerminal.tsx  ErrorBoundary.tsx  Experience.tsx  FadeInWhenVisible.tsx  (+20 more)
frontend/public/: README_RESUME.txt  manifest.json  offline.html  robots.txt  sw.js
frontend/scripts/: post-build-index.js  setup-openai.ts
frontend/types/: generative-ai.d.ts
(+22 files in other folders)
