[project]
name = "portfolio-ai-assistant-backend"
version = "1.0.0"
description = "Professional Portfolio AI Assistant backend with OpenAI Agent SDK and Context7 integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai-agents>=0.4.2",
    "chainlit>=2.8.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "/.git",
    "/.venv",
    "/__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "*.db",
    "*.db-shm",
    "*.db-wal",
]
